bad/class_field_with_nonexistent_class_array_type.example_compiler_output
ERROR
[1mbad/class_field_with_nonexistent_class_array_type.lat:3:5: [1;31merror: [0;1mUnknown class: list[m
    list[] foo;
    [1;32m^[m
